Fix grey block on mobile views of TOU, Privacy, FAQ

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -3686,6 +3686,8 @@ img.image-md {
 }
 
 /*Other Spaces*/
+.margin-top-90 { margin-top: 20px;}
+.margin-top-60 { margin-top: 20px;}
 .margin-top-20 { margin-top: 20px;}
 .margin-left-5 { margin-left: 5px;}
 .margin-left-10 { margin-left: 10px;}
