--- a/public/assets/css/one.style.css
+++ b/public/assets/css/one.style.css
@@ -161,7 +161,7 @@ a:hover {
 /*Navbar*/
 .one-page-header {
   border-bottom: none;
-  background: rgba(193, 193, 193, 0.7);
+  background: rgba(93, 93, 93, 0.9);
 }
 .one-page-header .container {
   position: relative;
